compiler/parser/src/snapshots/rustpython_parser__context__tests__del_subscript.snap
---
source: compiler/parser/src/context.rs
expression: parse_ast
---
[
    Located {
        range: 0..8,
        custom: (),
        node: Delete {
            targets: [
                Located {
                    range: 4..8,
                    custom: (),
                    node: Subscript {
                        value: Located {
                            range: 4..5,
                            custom: (),
                            node: Name {
                                id: "x",
                                ctx: Load,
                            },
                        },
                        slice: Located {
                            range: 6..7,
                            custom: (),
                            node: Name {
                                id: "y",
                                ctx: Load,
                            },
                        },
                        ctx: Del,
                    },
                },
            ],
        },
    },
]
